--- a/sessao05/App01_ConsultarCep/App01_ConsultarCep/App01_ConsultarCep.Android/App01_ConsultarCep.Android.csproj
+++ b/sessao05/App01_ConsultarCep/App01_ConsultarCep/App01_ConsultarCep.Android/App01_ConsultarCep.Android.csproj
@@ -100,7 +100,7 @@
     <AndroidResource Include="Resources\drawable\logo.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\logo-correios.png" />
+    <AndroidResource Include="Resources\drawable\logoCorreios.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
