--- a/sessao05/App01_ConsultarCep/App01_ConsultarCep/App01_ConsultarCep.iOS/App01_ConsultarCep.iOS.csproj
+++ b/sessao05/App01_ConsultarCep/App01_ConsultarCep/App01_ConsultarCep.iOS/App01_ConsultarCep.iOS.csproj
@@ -161,6 +161,6 @@
     <BundleResource Include="Resources\logo.png" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\logo-correios.png" />
+    <BundleResource Include="Resources\logoCorreios.png" />
   </ItemGroup>
 </Project>
