--- a/sessao05/App01_ConsultarCep/App01_ConsultarCep/App01_ConsultarCep.Android/App01_ConsultarCep.Android.csproj
+++ b/sessao05/App01_ConsultarCep/App01_ConsultarCep/App01_ConsultarCep.Android/App01_ConsultarCep.Android.csproj
@@ -97,10 +97,16 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <AndroidResource Include="Resources\drawable\xamarin.png" />
+  </ItemGroup>
+  <ItemGroup>
     <AndroidResource Include="Resources\drawable\logo.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\logoCorreios.png" />
+    <AndroidResource Include="Resources\drawable\Page.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\play.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
