--- a/sessao05/App01_ConsultarCep/App01_ConsultarCep/App01_ConsultarCep.iOS/App01_ConsultarCep.iOS.csproj
+++ b/sessao05/App01_ConsultarCep/App01_ConsultarCep/App01_ConsultarCep.iOS/App01_ConsultarCep.iOS.csproj
@@ -158,9 +158,15 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <BundleResource Include="Resources\xamarin.png" />
+  </ItemGroup>
+  <ItemGroup>
     <BundleResource Include="Resources\logo.png" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\logoCorreios.png" />
+    <BundleResource Include="Resources\Page.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\play.png" />
   </ItemGroup>
 </Project>
