--- a/sessao07/App02_Xamarin/App02_Xamarin/App02_Xamarin.iOS/App02_Xamarin.iOS.csproj
+++ b/sessao07/App02_Xamarin/App02_Xamarin/App02_Xamarin.iOS/App02_Xamarin.iOS.csproj
@@ -160,4 +160,10 @@
   <ItemGroup>
     <BundleResource Include="Resources\Logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\Perfil.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\Fundo.png" />
+  </ItemGroup>
 </Project>
